--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -258,6 +258,7 @@ gui.config.plugin.optional.link_help = http://jdownloader.org/knowledge/wiki/sta
 gui.config.plugin.optional.linktext_help = Hilfe
 gui.config.popup.title = Konfiguration
 gui.config.reconnect.name = Reconnect
+gui.config.reconnect.showupload = Zeige ReconnectInfo Upload Fenster
 gui.config.reloadcontainer = Heruntergeladene Container einlesen
 gui.config.routeripfinder = Router IP Suche
 gui.config.routeripfinder.close = Fenster schließen
@@ -343,6 +344,36 @@ gui.fengshuiconfig.routerpassword = Passwort
 gui.fengshuiconfig.testsettings = Einstellungen testen
 gui.fengshuiconfig.username = Benutzername
 gui.fengshuiconfig.wikiurl = http://jdownloader.org/knowledge/wiki/gui/configuration/feng-shui-config
+gui.filechooser.acceptallfilefiltertext = Alle Dateien
+gui.filechooser.cancelbuttontext = Abbrechen
+gui.filechooser.cancelbuttontooltiptext = Abbrechen
+gui.filechooser.deletebuttontext = Löschen
+gui.filechooser.deletebuttontooltiptext = Löschen
+gui.filechooser.detailsviewbuttontooltiptext = Details
+gui.filechooser.filenamelabeltext = Dateiname:
+gui.filechooser.filesoftypelabeltext = Dateityp:
+gui.filechooser.helpbuttontext = Hilfe
+gui.filechooser.helpbuttontooltiptext = Hilfe
+gui.filechooser.listviewbuttontooltiptext = Liste
+gui.filechooser.loaddlc = Lade DLC Datei
+gui.filechooser.lookinlabeltext = Suchen in:
+gui.filechooser.newfoldertooltiptext = Erstelle einen neuen Ordner
+gui.filechooser.openbuttontext = Öffnen
+gui.filechooser.openbuttontooltiptext = Öffnen
+gui.filechooser.openwindowtitletext = Öffnen
+gui.filechooser.other.newfolder.subsequent = Neuer Ordner {0}
+gui.filechooser.other.newfoldert = Neuer Ordner
+gui.filechooser.pathlabeltext = Pfad
+gui.filechooser.savebuttontext = Speichern
+gui.filechooser.savebuttontooltiptext = Speichern
+gui.filechooser.saveinlabeltext = Speichern in:
+gui.filechooser.savelistasdlc = Speicher Liste in DLC Datei
+gui.filechooser.savewindowtitletext = Speichern
+gui.filechooser.updatebuttontext = Aktualisieren
+gui.filechooser.updatebuttontooltiptext = Aktualisieren
+gui.filechooser.upfoldertooltiptext = Eine Ebene höher
+gui.filechooser.win32.newfolder = Neuer Ordner
+gui.filechooser.win32.newfolder.subsequent = Neuer Ordner {0}
 gui.javacheck.html = <div style='width:534px;height;200px'><h2>Sie verwenden eine falsche Javaversion. Bitte das original Sun-Java verwenden. JDownloader trotzdem starten?<table width='100%%'><tr><th colspan='2'>Ihre Java Version:</th></tr><tr><th>Runtime Name</th><td>%s</td></tr><tr><th>Runtime Version</th><td>%s</td></tr></table></div>
 gui.javacheck.title = Falsche Javaversion
 gui.linkgrabber.bar.title = Infosammler
@@ -545,6 +576,8 @@ gui.menu.plugins.help = ?
 gui.menu.plugins.phost = Premium Hoster
 gui.menu.remove = Entfernen
 gui.messages.outofmemoryerror = Ein Speicherfehler wurde festgestellt. Neustart dringend empfohlen!\r\nBitte benachrichtige die Entwickler über diesen Fehler!
+gui.messagewindow.backupcreated = Backup der Linkliste wurde erfolgreich erstellt.
+gui.messagewindow.information = Information
 gui.packageinfo.comment = Kommentar
 gui.packageinfo.dldirectory = Downloadverzeichnis
 gui.packageinfo.extractafter = Automatisches entpacken
@@ -618,7 +651,10 @@ gui.treetable.header_2.files = Dateien
 gui.treetable.header_3.hoster = Anbieter
 gui.treetable.header_4.status = Status
 gui.treetable.header_5.progress = Fortschritt
+gui.treetable.horizontalscroll = Horizontaler Rollbalken
 gui.treetable.packagestatus.links_active = aktiv
+gui.treetable.packall = Alle Spalten anpassen
+gui.treetable.packselected = Ausgewählte Spalte anpassen
 gui.treetable.part.label = Datei
 gui.treetable.part.label_update = Update
 gui.treetable.parts = Teil(e)
@@ -752,6 +788,7 @@ modules.reconnect.types.batch = Batch
 modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = Extern
 modules.reconnect.types.liveheader = LiveHeader/Curl
+plugin.optional.jdchat.getlog = %s benötigt ein Log um das Problem zu beheben. Soll das Log an ihm gesendet werden?
 plugin.optional.jdchat.teamviewer.yourtvdata = Deine Teamviewer Daten:
 plugin.rapidshare.error.accountnotfound = Premium Account wurde nicht gefunden.
 plugin.rapidshare.error.filetolarge = Diese Datei ist grösser als 200 MB, sie benötigen einen Premium-Account um sie runterzuladen.
@@ -759,6 +796,8 @@ plugin.rapidshare.error.limitexeeded = Das Downloadlimit wurde erreicht.
 plugin.rapidshare.error.serverunavailable = Der Server %s ist momentan nicht verfügbar.
 plugin.rapidshare.tickettime = %s auf Ticket warten
 plugin.serienjunkies.archiveincomplete = Archiv nicht komplett
+plugin.serienjunkies.manager.dllinks = Unerwünschte Links einfach löschen
+plugin.serienjunkies.manager.title = SerienJunkies Linkverwaltung
 plugin.serienjunkies.pageerror = SJ liefert keine Downloadlinks
 plugin.system.notloaded = ~
 plugins.config.premium.accountnum = <html><b>Premium Account #%s</b></html>
@@ -779,6 +818,8 @@ plugins.decrypt.cryptitcom.password = Ordner ist Passwortgeschützt. Passwort an
 plugins.decrypt.general.captchacodewrong = Captcha Code falsch
 plugins.decrypt.general.hosterselection = Hoster Auswahl
 plugins.decrypt.gwarezcc.preferdlc = DLC Container bevorzugen
+plugins.decrypt.jamendo = Unterordner für jedes Album erstellen
+plugins.decrypt.jamendoalbum = Bevorzuge ganzes Album als Zip
 plugins.decrypt.linkbankeu = Mirror Links überprüfen
 plugins.decrypt.myspacecom0 = Alle Downloads nach 'myspace.com/' laden
 plugins.decrypt.myspacecom1 = Für jeden Musiker einen eigenen Unterordner erstellen
@@ -786,6 +827,12 @@ plugins.decrypt.rslayer.captchaexpired = Sicherheitscode abgelaufen
 plugins.decrypt.serienjunkies.automaticmirrormanagment = Automatisches Mirror-Management
 plugins.decrypt.serienjunkies.mirrormanagement = Mirror-Management
 plugins.decrypt.serienjunkies.nomirrormanagment = Kein Mirror-Management
+plugins.decrypt.serienjunkies.progress.captcha = Fehler: Captcha
+plugins.decrypt.serienjunkies.progress.checklinks = Überprüfe Links
+plugins.decrypt.serienjunkies.progress.checkmirror = Überprüfe Mirrors
+plugins.decrypt.serienjunkies.progress.decryptlimit = SJ Downloadlimit (Decryptlimit) erreicht. Warte auf Reconnect (Max. 2 Minuten)
+plugins.decrypt.serienjunkies.progress.downloadlimit = Fehler: SerienJunkies Downloadlimit
+plugins.decrypt.serienjunkies.progress.getlinks = Hole Links
 plugins.decrypt.serienjunkies.usepremiumlinks = Premiumlinks verwenden, wenn möglich
 plugins.decrypt.speedysharecom.password = Passwort eingeben:
 plugins.decrypt.stealthto.captcha = Bitte klicke auf den Kreis mit Lücke
@@ -798,6 +845,11 @@ plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.dosyakaydet.breakcaptcha = Auf OCR warten
+plugins.host.megaupload.captchamode.title = Captcha Modus:
+plugins.host.megaupload.captchamode_auto = Automatisch
+plugins.host.megaupload.captchamode_no_captcha = Vermeide Captchas
+plugins.host.megaupload.captchamode_no_reconnect = Vermeide Reconnects
+plugins.host.megaupload.ports = Benutze Port:
 plugins.host.meinupload.serverdefect = Service nicht verfügbar
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
@@ -824,6 +876,7 @@ plugins.host.sharebaseto.servererror = Service nicht verfügbar
 plugins.host.xup = Passwort falsch
 plugins.hoster.error.agb = AGB nicht akzeptiert
 plugins.hoster.general.passwordprotectedinput = Die Links sind mit einem Passwort geschützt. Bitte geben Sie das Passwort ein:
+plugins.hoster.jamendo = Bevorzuge High Quality Download
 plugins.hoster.passquestion = Link '%s' ist Passwortgeschützt. Passwort eingeben:
 plugins.hoster.premium.status_ok = Account ist OK
 plugins.hoster.premiumtab = Premium Einstellungen
@@ -936,6 +989,12 @@ plugins.optional.jdunrar.status.extracting = Entpacken ...
 plugins.optional.jdunrar.status.extractok = Entpacken OK
 plugins.optional.jdunrar.status.openingarchive = Öffne Archiv ...
 plugins.optional.jdunrar.status.passfound = Passwort gefunden
+plugins.optional.langfileeditor.addkey = Key hinzufügen
+plugins.optional.langfileeditor.addkey.error.message = Der Schlüssel '%s' ist bereits in Benutzung!
+plugins.optional.langfileeditor.addkey.error.title = Doppelter Schlüssel
+plugins.optional.langfileeditor.addkey.message1 = Schlüssel-Name:
+plugins.optional.langfileeditor.addkey.message2 = Übersetzte Meldung zum Schlüssel:
+plugins.optional.langfileeditor.addkey.title = Neuen Schlüssel hinzufügen
 plugins.optional.langfileeditor.adoptdefaults = Standardwert(e) übernehmen
 plugins.optional.langfileeditor.adoptdefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
 plugins.optional.langfileeditor.changed.message = Language File hat sich geändert! Änderungen abspeichern?
