--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -196,6 +196,7 @@ gui.config.gui.disabledialogs = Wyłącz potwierdzenia
 gui.config.gui.disabletooltipps = Wyłącz podpowiedzi z listy pobrań
 gui.config.gui.doubeclick = Klkiknij dwukrotnie by rozwinąć/zwinąć pakiet
 gui.config.gui.ext = Zaawansowane
+gui.config.gui.inputtimeout = Czas oczekiwania dla okienek wpisywania
 gui.config.gui.language = Język
 gui.config.gui.languagefileinfo = Bieżący plik tłumaczenia: %s , przetłumaczony przez %s w wersji %s
 gui.config.gui.linkgrabber.onlinecheck = Przechwytywanie linków: Stan linku (dostępny)
@@ -204,6 +205,7 @@ gui.config.gui.plaf = Styl (Po zmianie uruchom ponownie)
 gui.config.gui.premiumconfigfilednum = Ilość wyświetlanych pól kont Premium
 gui.config.gui.reg_protocols = Otwieraj pliki ccf/dlc/rdsf za pomocą JDownloadera
 gui.config.gui.show_speed_graph = Wyświetlaj wykres prędkości pobierania
+gui.config.gui.show_speed_graph_window = Czas miernika prędkości (w sek.)
 gui.config.gui.showsplash = Pokazuj ekran uruchamiania programu
 gui.config.gui.soundtheme = Schemat dźwięków
 gui.config.gui.testbrowser = Testuj przeglądarkę
@@ -390,6 +392,7 @@ gui.linkgrabber.bar.title = Zbieracz informacji
 gui.linkgrabber.btn.accept = Akceptuj link
 gui.linkgrabber.btn.acceptall = Akceptuj wszystkie
 gui.linkgrabber.btn.sortpackages = Sortuj linki
+gui.linkgrabber.checkstatus = Trwa sprawdzanie online...
 gui.linkgrabber.cmb.insertatposition = Wstaw na:
 gui.linkgrabber.lbl.isoffline = [offline]
 gui.linkgrabber.lbl.isonline = [online]
@@ -907,6 +910,7 @@ plugins.host.premium.info.trafficleft = Pozostały limit
 plugins.host.premium.info.trafficshareleft = Pozostały limit udostępniania
 plugins.host.premium.info.usedspace = Użyte miejsce
 plugins.host.premium.info.validuntil = Ważne do
+plugins.host.rapidshare.apierror = Rapidshare donosi, że %s
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Sesja pobierania wygasła. Spróbuj ponownie.
 plugins.host.rapidshare.errors.15fb70be386bb33e91b8e31b3b94c021 = Plik nie został odnaleziony. Sprawdź poprawność linku.
 plugins.host.rapidshare.errors.32012e683d4eed2399b17c1ef0f3dde0 = Limit pobierania dla darmowego użytkownika osiągnięty. Chcesz pobrać więcej?
@@ -982,6 +986,7 @@ plugins.optional.infofilewriter.content = Zawartość:
 plugins.optional.infofilewriter.filename = Nazwa pliku:
 plugins.optional.infofilewriter.name = Zapis pliku Info
 plugins.optional.infofilewriter.variables = Dostępne zmienne
+plugins.optional.jdchat.channel = Wybierz kanał
 plugins.optional.jdchat.doautotranslate = Tłumacz Czat
 plugins.optional.jdchat.doautotranslateself = Tłumacz wszystko co piszę
 plugins.optional.jdchat.enternick = Wybierz pseudonim dla siebie
