--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -7,13 +7,13 @@ addons.jdshutdown.statusmessage.enabled = Das System wird nach dem Download heru
 addons.schedule.menu.add = Hinzufügen
 addons.schedule.menu.close = Schließen
 addons.schedule.menu.create = Neu
-addons.schedule.menu.edit = Barbeiten
+addons.schedule.menu.edit = Bearbeiten
 addons.schedule.menu.finished = Abgeschlossen
 addons.schedule.menu.maxdl = max. Downloads
 addons.schedule.menu.maxspeed = max. Downloadgeschwindigkeit
 addons.schedule.menu.p_time = Bitte einen Zeitpunkt in der Zukunft wählen
 addons.schedule.menu.reconnect = Reconnect?
-addons.schedule.menu.redo = Zurückstellen in[Stunden]
+addons.schedule.menu.redo = Zurückstellen in [Stunden]
 addons.schedule.menu.remain = Verbleibend:
 addons.schedule.menu.remove = Entfernen
 addons.schedule.menu.running = Angehalten!
