--- a/trunk/ressourcen/jd/languages/Bosnian.lng
+++ b/trunk/ressourcen/jd/languages/Bosnian.lng
@@ -299,7 +299,7 @@ gui.dialog.about.chat = Chat
 gui.dialog.about.chaturl = http://jdownloader.org/knowledge/chat
 gui.dialog.about.email = Email
 gui.dialog.about.forum = Tabla podrške
-gui.dialog.about.forumurl = http://jdownloader.org/knowledge/forum
+gui.dialog.about.forumurl = http://board.jdownloader.org
 gui.dialog.about.homepage = Početna stranica
 gui.dialog.about.homeurl = http://www.jdownloader.org/home
 gui.dialog.about.jddevteam = JDownloader Developer Grupa
@@ -579,7 +579,7 @@ gui.statusbar.interaction = Interakcija:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max.Dls.
 gui.statusbar.speed = Brzina
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://jdownloader.org/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Modul
 gui.tab.plugin_activity.column_progress = Stanje
