--- a/trunk/ressourcen/jd/languages/Chinese.lng
+++ b/trunk/ressourcen/jd/languages/Chinese.lng
@@ -566,7 +566,7 @@ gui.splash.text.webupdate = 檢查更新
 gui.statusbar.premium = 白金帳號
 gui.statusbar.sim_ownloads = 最大下載數
 gui.statusbar.speed = 速度
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://jdownloader.org/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = 模組
 gui.tab.plugin_activity.column_progress = 進度
