--- a/trunk/ressourcen/jd/languages/Czech.lng
+++ b/trunk/ressourcen/jd/languages/Czech.lng
@@ -310,7 +310,7 @@ gui.dialog.about.chat = Chat
 gui.dialog.about.chaturl = http://jdownloader.org/knowledge/chat
 gui.dialog.about.email = E-mail
 gui.dialog.about.forum = Fórum podpory
-gui.dialog.about.forumurl = http://jdownloader.org/knowledge/forum
+gui.dialog.about.forumurl = http://board.jdownloader.org
 gui.dialog.about.homepage = Domovská stránka
 gui.dialog.about.homeurl = http://www.jdownloader.org/home
 gui.dialog.about.jddevteam = JDownloader Developer Team
@@ -635,7 +635,7 @@ gui.statusbar.interaction = Činnost:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max. stah.
 gui.statusbar.speed = Rychlost
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://jdownloader.org/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Modul
 gui.tab.plugin_activity.column_progress = Průběh
