--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -627,7 +627,7 @@ gui.statusbar.interaction = Teraz trwa:
 gui.statusbar.premium = Użyj Konta Premium
 gui.statusbar.sim_ownloads = Pobieraj równocześnie
 gui.statusbar.speed = Limit prędkości
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://www.jdownloader.org/pl/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Wtyczka
 gui.tab.plugin_activity.column_progress = Postęp
