--- a/trunk/ressourcen/jd/languages/Spanish.lng
+++ b/trunk/ressourcen/jd/languages/Spanish.lng
@@ -299,7 +299,7 @@ gui.dialog.about.chat = Chat
 gui.dialog.about.chaturl = http://jdownloader.org/knowledge/chat
 gui.dialog.about.email = E-mail
 gui.dialog.about.forum = Foro de soporte
-gui.dialog.about.forumurl = http://jdownloader.org/knowledge/forum
+gui.dialog.about.forumurl = http://board.jdownloader.org
 gui.dialog.about.homepage = Página principal
 gui.dialog.about.homeurl = http://www.jdownloader.org/home
 gui.dialog.about.jddevteam = Equipo que desarrolla jDownloader
@@ -579,7 +579,7 @@ gui.statusbar.interaction = Interacción
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Descargas Máx.
 gui.statusbar.speed = Velocidad
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://jdownloader.org/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Módulo
 gui.tab.plugin_activity.column_progress = Progreso
