--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -294,7 +294,7 @@ gui.dialog.about.chat = Chat
 gui.dialog.about.chaturl = http://jdownloader.org/knowledge/chat
 gui.dialog.about.email = Email
 gui.dialog.about.forum = Support board
-gui.dialog.about.forumurl = http://jdownloader.org/knowledge/forum
+gui.dialog.about.forumurl = http://board.jdownloader.org
 gui.dialog.about.homepage = Homepage
 gui.dialog.about.homeurl = http://www.jdownloader.org/home
 gui.dialog.about.jddevteam = JDownloader Developer Team
@@ -583,7 +583,7 @@ gui.statusbar.interaction = Interaction:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max.Dls.
 gui.statusbar.speed = Speed
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://jdownloader.org/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Module
 gui.tab.plugin_activity.column_progress = Progress
