--- a/trunk/ressourcen/jd/languages/french.lng
+++ b/trunk/ressourcen/jd/languages/french.lng
@@ -316,7 +316,7 @@ gui.dialog.about.chat = Clavardage
 gui.dialog.about.chaturl = http://jdownloader.org/knowledge/chat
 gui.dialog.about.email = Courriel
 gui.dialog.about.forum = Forum de discussion
-gui.dialog.about.forumurl = http://jdownloader.org/knowledge/forum
+gui.dialog.about.forumurl = http://board.jdownloader.org
 gui.dialog.about.homepage = Page d'acceuil
 gui.dialog.about.homeurl = http://www.jdownloader.org/home
 gui.dialog.about.jddevteam = Équipe de développement de JDownloader
@@ -610,7 +610,7 @@ gui.statusbar.interaction = Interaction:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Téléchar. Max.
 gui.statusbar.speed = Vitesse
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://jdownloader.org/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Module
 gui.tab.plugin_activity.column_progress = Progression
