--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -604,7 +604,7 @@ gui.statusbar.interaction = Interaktion:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max.Dls.
 gui.statusbar.speed = Geschw.
-gui.support.forumurl = http://jdownloader.org/knowledge/forum
+gui.support.forumurl = http://board.jdownloader.org
 gui.support.wikiurl = http://jdownloader.org/de/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Module
 gui.tab.plugin_activity.column_progress = Fortschritt
