--- a/trunk/ressourcen/jd/languages/Spanish(Argentina).lng
+++ b/trunk/ressourcen/jd/languages/Spanish(Argentina).lng
@@ -312,7 +312,7 @@ gui.dialog.about.chat = Chat
 gui.dialog.about.chaturl = http://jdownloader.org/knowledge/chat
 gui.dialog.about.email = Email
 gui.dialog.about.forum = Foro de soporte
-gui.dialog.about.forumurl = http://board.jdownloader.org
+gui.dialog.about.forumurl = http://jdownloader.org/knowledge/forum
 gui.dialog.about.homepage = Pagina principal
 gui.dialog.about.homeurl = http://www.jdownloader.org/home
 gui.dialog.about.jddevteam = Equipo desarrollador de JDownloader
@@ -457,6 +457,10 @@ gui.menu.action.add.accel = CTRL+V
 gui.menu.action.add.desc = Agrega uno o más enlaces de descarga
 gui.menu.action.add.mnem = H
 gui.menu.action.add.name = Agregar enlaces
+gui.menu.action.backup.accel = CTRL+B
+gui.menu.action.backup.desc = Crear respaldo de la lista de enalaces
+gui.menu.action.backup.mnem = B
+gui.menu.action.backup.name = Respaldo
 gui.menu.action.changes.accel = CTRL+SHIFT+C
 gui.menu.action.changes.desc = Muestra los últimos cambios
 gui.menu.action.changes.mnem = C
@@ -592,6 +596,7 @@ gui.packageinfo.packagesize = Tamaño del paquete
 gui.packageinfo.password = Contraseña
 gui.packageinfo.rate = Tasa de renovación
 gui.packageinfo.title = Información del paquete: 
+gui.plugins.decrypt.askclicknload = El desencriptador %s está obsoleto, pero soporta Click'n'Load. ¿Abrir el sitio ahora?
 gui.reconnect.confirm = ¿Deseas reconectar tu conexión?
 gui.reconnect.failed = Re conexión fallida
 gui.reconnect.success = Re conexión satisfactoria
@@ -609,7 +614,7 @@ gui.statusbar.interaction = Interacción:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Descargas Máx.
 gui.statusbar.speed = Velocidad
-gui.support.forumurl = http://board.jdownloader.org
+gui.support.forumurl = http://jdownloader.org/knowledge/forum
 gui.support.wikiurl = http://jdownloader.org/knowledge/wiki/start
 gui.tab.plugin_activity.column_plugin = Módulo
 gui.tab.plugin_activity.column_progress = Progreso
@@ -817,6 +822,7 @@ modules.reconnect.types.batch = Lote
 modules.reconnect.types.clr = Script CLR
 modules.reconnect.types.extern = Externo
 modules.reconnect.types.liveheader = LiveHeader/Curl
+plugin.optional.jdchat.getlog = %s necesita un registro para resolver su problema. ¿Está usted de acuerdo en enviarale el Registro?
 plugin.optional.jdchat.teamviewer.yourtvdata = Accesos de tu equipo visor:
 plugin.rapidshare.error.accountnotfound = No se ha encontrado tu cuenta Premium.
 plugin.rapidshare.error.filetolarge = Este archivo es mayor de 200 MB, necesita una cuenta premium para descargar el archivo.
@@ -830,6 +836,7 @@ plugin.system.notloaded = Inactivo
 plugins.config.premium.accountnum = <html><b>Cuenta Premium #%s</b></html>
 plugins.config.premium.chartapi.caption.error = %s cargando o no disponible
 plugins.config.premium.chartapi.maxtraffic = Trafico maximo a reunir
+plugins.config.premium.globaldeactiv = <html><b>Global deshabilitado</b></html>
 plugins.config.premium.password = Contraseña
 plugins.config.premium.test = Obtener estado
 plugins.config.premium.user = Usuario Premium
@@ -839,6 +846,7 @@ plugins.container.exit.error = Contenedor de error: %s
 plugins.container.found = Procesar %s enlace(s)
 plugins.container.open = Abrir contenedor
 plugins.decrypt.brazil-series.com1 = Formato de descarga: Solo AVI sin subtitulos
+plugins.decrypt.charts4you.captcha = Por favor, haga click en el círculo con un hueco
 plugins.decrypt.cryptitcom.password = La carpeta esta protegida con contraseña. Introduce la contraseña:
 plugins.decrypt.general.captchacodewrong = Código captcha erróneo
 plugins.decrypt.general.hosterselection = Selección de servidor
@@ -1185,6 +1193,13 @@ plugins.trayicon.popup.menu.toggleclipboard = Habilitar/Deshabilitar monitoreo d
 plugins.trayicon.popup.menu.togglereconnect = Habilitar/Deshabilitar re conexión
 plugins.trayicon.popup.menu.update = Ejecutar actualización
 plugins.trayicon.popup.title = JDownloader
+reconnect.ipfiltered.warning.short = La IP %s no está permitida!
+reconnect.progress.1_retries = Reconexion #
+reconnect.progress.2_oldip = Reconectar antigua IP:
+reconnect.progress.3_ipcheck = Reconectar nueva IP: %s / %s
+reconnect.retries = Maximas repeticiones (-1 = infinito)
+reconnect.waitforip = Esperar para nueva IP (sec)
+reconnect.waittimetofirstipcheck = Tiempo de espera de la primera comprobacion de IP (seg)
 routerinfocollector.dialog.msg = <b>¡Para mejorar la detección y re conexión automática de router, recolectamos la información del router!</b><br>Si estas de acuerdo en subir los detalles obtenidos de tu router por favor confirma con un ¡SI!!
 routerinfocollector.dialog.title = Por favor, ayúdenos a mejorar la deteccion automatica del router.
 showcaptcha.choose.file = Selecciona un archivo de imagen
